--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,13 +2,13 @@
 # Set Zsh as the default Tmux shell
 set -g default-shell /bin/zsh
 
-# Change Prefix
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+## Change Prefix {
+  unbind C-b
+  set -g prefix C-a
+  bind C-a send-prefix
+# }
 
 #unbind c
-
 # utf8 is on
 #set -g utf8 on
 #set -g status-utf8 on
@@ -23,7 +23,7 @@ set -g history-limit 50000
 set -g display-time 4000
 
 ## refresh 'status-left' and 'status-right' more often
-set -g status-interval 5
+set -g status-interval 3
 #
 # # upgrade $TERM
 set -g default-terminal "screen-256color"
@@ -58,126 +58,103 @@ setw -g aggressive-resize on
 # allow terminal scrolling
 set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# ---------------------
-# Window options
-# ---------------------
-set-window-option -g monitor-activity on
-# Renumber windows when a window is closed
-set -g renumber-windows on
+## Window configurations {
+  set-window-option -g monitor-activity on
+  # Renumber windows when a window is closed
+  set -g renumber-windows on
+  set-window-option -g automatic-rename off
+  set-option -g allow-rename off
 
-set-window-option -g automatic-rename off
-set-option -g allow-rename off
+  set -g window-active-style 'fg=colour255,bg=colour232'
+  set -g window-style 'fg=colour255,bg=default'
+# }
 
-# ---------------------
-# Copy & Paste
-# ---------------------
-# provide access to the clipboard for pbpaste, pbcopy
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
-# don't rename windows automatically
-# use vim keybindings in copy mode
-#setw -g mode-keys vi
-# setup 'v' to begin selection as in Vim
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# update default binding of 'Enter' to also use copy-pipe
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-#bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-#bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
+## Pane Configurations {
+  # border colours
+  set -g pane-border-fg default
+  set -g pane-border-bg default
+  set -g pane-active-border-fg brightyellow
+  set -g pane-active-border-bg colour237
+## }
 
 
-###
-# Keybindings
-###
+## Keybindings {
+  # Switch to Last active window
+  bind-key a last-window
 
-# Switch to Last active window
-bind-key a last-window
+  # Reload configuration
+  bind r source-file ~/.tmux.conf \; display " Tmux Conf Reloaded!"
 
-# Reload configuration
-bind r source-file ~/.tmux.conf \; display " Tmux Conf Reloaded!"
+  #bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
-#bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+  # Smart pane switching with awareness of vim splits
+  # # See: https://github.com/christoomey/vim-tmux-navigator
+  #is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+  #bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+  #bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+  #bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+  #bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+  #bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# Smart pane switching with awareness of vim splits
-# # See: https://github.com/christoomey/vim-tmux-navigator
-#is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
-#bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-#bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-#bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-#bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-#bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+  # Split
+  unbind %
+  unbind '"'
+  unbind o
+  bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
+  bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
 
-# Split
-unbind %
-unbind '"'
-unbind o
-bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
-bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
+  #urxvt tab like window switching (-n: no prior escape seq)
+  bind down new-window -c '#{pan_current_path}'
+  bind c new-window -c '#{pan_current_path}'
+  bind left prev
+  bind right next
+  #bind -n C-left swap-window -t -1
+  #bind -n C-right swap-window -t +1
 
-#urxvt tab like window switching (-n: no prior escape seq)
-bind down new-window -c '#{pan_current_path}'
-bind c new-window -c '#{pan_current_path}'
-bind left prev
-bind right next
-#bind -n C-left swap-window -t -1
-#bind -n C-right swap-window -t +1
+  # Resize
+  bind H resize-pane -L 5
+  bind J resize-pane -D 5
+  bind K resize-pane -U 5
+  bind L resize-pane -R 5
 
-# Resize
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
+  # Kill window
+  bind X kill-window
+  bind Q kill-session
 
-# Kill window
-bind X kill-window
-bind Q kill-session
+  #bind C-l send-keys 'C-l'
 
-#bind C-l send-keys 'C-l'
-
-# Mouse support - set to on if you want to use the mouse
-set -g mouse on
-bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-# Scroll an entire page instead of just a line.
-#bind -t vi-copy    WheelUpPane   page-up
-#bind -t vi-copy    WheelDownPane page-down
-
-# ----------------------
-# set some pretty colors
-# ----------------------
-# panes
- #set pane colors - hilight the active pane
-set -g pane-border-fg black
-set -g pane-active-border-fg brightyellow
-#set-option -g pane-border-fg colour235 #base02
-#set-option -g pane-active-border-fg colour240 #base01
-
-# messaging
-set -g message-fg black
-set -g message-bg yellow
-set -g message-command-fg blue
-set -g message-command-bg black
-
-# ----------------------
-# Status Bar
-# -----------------------
-set-option -g status on                # turn the status bar on
-set -g status-interval 5               # set update frequencey (default 15 seconds)
-set -g status-justify centre           # center window list for clarity
-# set-option -g status-position top    # position the status bar at top of screen
+  # Mouse support - set to on if you want to use the mouse
+  set -g mouse on
+  bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+  bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+  # Scroll an entire page instead of just a line.
+  #bind -t vi-copy    WheelUpPane   page-up
+  #bind -t vi-copy    WheelDownPane page-down
+## }
 
 
-# visual notification of activity in other windows
-setw -g monitor-activity on
-set -g visual-activity on
+## Messaging {
+  set -g message-fg brightwhite
+  set -g message-bg blue
+  set -g message-command-fg blue
+  set -g message-command-bg black
+# }
 
-# set color for status bar
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 2
-set-option -g status-attr dim
-set-option -g status-attr bright
+# Visual notification of activity in other windows {
+  setw -g monitor-activity on
+  set -g visual-activity on
+# }
+
+## Status Bar {
+  set-option -g status on       # turn the status bar on
+  set -g status-justify centre  # center window list for clarity
+  set -g status-bg default
+  set -g status-fg colour12
+  set -g status-interval 2
+  set-option -g status-attr dim
+  set-option -g status-attr bright
+# }
+
 
 ## Window status {
   setw -g window-status-format "#[bg=yellow]#[fg=black] #I:#[bg=cyan]#[fg=colour8] #W #F "
