--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,7 +20,7 @@ set -s escape-time 0
 set -g history-limit 50000
 
 ## tmux messages are displayed for 4 seconds
-set -g display-time 4000
+set -g display-time 2000
 
 ## refresh 'status-left' and 'status-right' more often
 set -g status-interval 3
@@ -87,124 +87,109 @@ set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
   #bind -n C-l run "(tmux display-message -p '#{pane_title}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
-  # Smart pane switching with awareness of vim splits
-  # # See: https://github.com/christoomey/vim-tmux-navigator
-  #is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
-  #bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-  #bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-  #bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-  #bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-  #bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
 
-  # Split
-  unbind %
-  unbind '"'
-  unbind o
-  bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
-  bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
+# Split
+unbind %
+unbind '"'
+unbind o
+bind \ split-window -h -c '#{pane_current_path}' # Split panes horizontal
+bind - split-window -v -c '#{pane_current_path}' # Split panes vertically
 
-  #urxvt tab like window switching (-n: no prior escape seq)
-  bind down new-window -c '#{pan_current_path}'
-  bind c new-window -c '#{pan_current_path}'
-  bind left prev
-  bind right next
-  #bind -n C-left swap-window -t -1
-  #bind -n C-right swap-window -t +1
+#urxvt tab like window switching (-n: no prior escape seq)
+bind down new-window -c '#{pan_current_path}'
+bind c new-window -c '#{pan_current_path}'
+bind left prev
+bind right next
+#bind -n C-left swap-window -t -1
+#bind -n C-right swap-window -t +1
 
-  # Resize
-  bind H resize-pane -L 5
-  bind J resize-pane -D 5
-  bind K resize-pane -U 5
-  bind L resize-pane -R 5
+# Resize
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
 
-  # Kill window
-  bind X kill-window
-  bind Q kill-session
+# Kill window
+bind X kill-window
+bind Q kill-session
 
-  #bind C-l send-keys 'C-l'
-
-  # Mouse support - set to on if you want to use the mouse
-  set -g mouse on
-  bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-  bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-  # Scroll an entire page instead of just a line.
-  #bind -t vi-copy    WheelUpPane   page-up
-  #bind -t vi-copy    WheelDownPane page-down
+# Mouse support - set to on if you want to use the mouse
+set -g mouse on
+bind -T root WheelUpPane   if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 ## }
 
 
 ## Messaging {
-  set -g message-fg brightwhite
-  set -g message-bg blue
-  set -g message-command-fg blue
-  set -g message-command-bg black
+set -g message-fg brightwhite
+set -g message-bg blue
+set -g message-command-fg blue
+set -g message-command-bg black
 # }
 
 # Visual notification of activity in other windows {
-  setw -g monitor-activity on
-  set -g visual-activity on
-# }
-
-## Status Bar {
-  set-option -g status on       # turn the status bar on
-  set -g status-justify centre  # center window list for clarity
-  set -g status-bg default
-  set -g status-fg colour12
-  set -g status-interval 2
-  set-option -g status-attr dim
-  set-option -g status-attr bright
+setw -g monitor-activity on
+set -g visual-activity on
 # }
 
 
-## Window status {
-  setw -g window-status-format "#[bg=yellow]#[fg=black] #I:#[bg=cyan]#[fg=colour8] #W #F "
-  setw -g window-status-current-format "#[fg=brightyellow]#[bg=colour8] #I:#[fg=colour8]#[bg=colour14] #W #F"
-  setw -g window-status-current-bg colour0
-  setw -g window-status-current-fg colour11
-  setw -g window-status-current-attr dim
-  setw -g window-status-bg green
-  setw -g window-status-fg black
-  setw -g window-status-attr reverse
-  #setw -g window-status-content-attr bold,blink
-# }
+#The statusbar {
+set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+set -g status-attr dim
+set -g status-left ''
+set -g status-right-length 50
+set -g status-left-length 20
 
-## Left Status bar {
-  set -g status-interval 2
-  # set -g status-left "#[bg=colour235,fg=white,bold]NET: #[fg=colour214]#{net_speed} #[fg=green,bg=black]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-left --interval 2 --graph-lines 5 --mem-mode 2)#[default]"
-  set -g status-left "#[fg=green,bg=black]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-left --interval 2 --graph-lines 5 --mem-mode 2)#[default]"
-# }
+setw -g window-status-current-fg colour81
+setw -g window-status-current-bg colour238
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 
-# show session name, window & pane number, date and time on right side of
-# status bar
-set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour241,bold] %a %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+setw -g window-status-fg colour138
+setw -g window-status-bg colour235
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
+
+set -g status-left-attr bold
+set -g status-left-length 70
+set -g status-left "#[bg=colour238]#[fg=colour255]: #h : #[fg=colour81]#(curl icanhazip.com) #[fg=yellow]#(ifconfig enp7s0 | grep 'inet ' | awk '{print \"enp7s0 \" $2}') #(ifconfig wlan0 | grep 'inet ' | awk '{print \"wlan0 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
+
+set -g status-right "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]"
+
+# }
 
 # tmux-prefix-highlight config {
-  set -g @prefix_highlight_fg 'white'
-  set -g @prefix_highlight_bg 'blue'
-  set -g @prefix_highlight_show_copy_mode 'on'
-  set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
-  set -g @prefix_highlight_output_prefix '< '
-  set -g @prefix_highlight_output_suffix ' >'
+set -g @prefix_highlight_fg 'white'
+set -g @prefix_highlight_bg 'blue'
+set -g @prefix_highlight_show_copy_mode 'on'
+set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow,bold'
+set -g @prefix_highlight_output_prefix '< '
+set -g @prefix_highlight_output_suffix ' >'
 # }
 
-
-## Plugins from TPM {
-  set -g @plugin 'tmux-plugins/tpm'
-  set -g @plugin 'tmux-plugins/tmux-sensible'
-  set -g @plugin 'tmux-plugins/tmux-pain-control'
-  set -g @plugin 'tmux-plugins/tmux-copycat'
-  set -g @plugin 'tmux-plugins/tmux-yank'
-  set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-  #set -g @plugin 'tmux-plugins/tmux-sidebar'
-  #set -g @plugin 'tmux-plugins/tmux-net-speed'
-  #set -g @plugin 'thewtex/tmux-mem-cpu-load'
-  set -g @plugin 'christoomey/vim-tmux-navigator'
-# }
-
-# Shell vi mode compatibility
 set -g @shell_mode 'vi'
+set -g @yank_selection 'primary'
 
-#set -g @sidebar-tree-command 'tree -C'
+## Plugins{
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+#set -g @plugin 'tmux-plugins/tmux-net-speed'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+# }
 
 # Initialize TMUX plugin manager
 run-shell '~/.tmux/plugins/tpm/tpm'
