--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,3 @@
-
 # Set Zsh as the default Tmux shell
 set -g default-shell /bin/zsh
 
@@ -7,9 +6,6 @@ set -g default-shell /bin/zsh
   set -g prefix C-a
   bind C-a send-prefix
 # }
-
-# Default terminal is 256 colors
-#set -g default-terminal "screen-256color"
 
 ## address vim mode switching delay (http://superuser.com/a/252717/65504)
 set -s escape-time 0
@@ -60,9 +56,6 @@ set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
   set -g renumber-windows on
   set-window-option -g automatic-rename off
   set-option -g allow-rename off
-
-  set -g window-active-style 'fg=colour255,bg=colour232'
-  set -g window-style 'fg=colour255,bg=default'
 # }
 
 ## Pane Configurations {
@@ -157,10 +150,7 @@ setw -g window-status-bell-bg colour1
 
 set -g status-left-attr bold
 set -g status-left-length 70
-set -g status-left "#[bg=colour238]#[fg=colour255]: #h : #[fg=colour81]#(curl icanhazip.com) #[fg=yellow]#(ifconfig enp7s0 | grep 'inet ' | awk '{print \"enp7s0 \" $2}') #(ifconfig wlan0 | grep 'inet ' | awk '{print \"wlan0 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-
-set -g status-right "#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default]"
-
+set -g status-left "#[bg=colour238]#[fg=white]: #h : #[fg=colour81]#(curl icanhazip.com) #[fg=yellow]#(ifconfig enp7s0 | grep 'inet ' | awk '{print \"enp7s0 \" $2}') #(ifconfig wlan0 | grep 'inet ' | awk '{print \"wlan0 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
 # }
 
 # tmux-prefix-highlight config {
@@ -183,16 +173,16 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 #set -g @plugin 'tmux-plugins/tmux-net-speed'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'odedlaz/tmux-onedark-theme'
+#set -g @plugin 'odedlaz/tmux-onedark-theme'
 # }
 
-# # upgrade $TERM
+# upgrade $TERM
 # Default terminal is 256 colors
 set -g default-terminal "screen-256color"
 # Add truecolor support
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 
 
 # Initialize TMUX plugin manager
