--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -138,6 +138,11 @@ set -g status-right-attr none
 set -g status-left-attr none
 set -g status-attr none
 
+set -g message-fg "$onedark_white,bold"
+set -g message-bg "$onedark_black"
+set -g message-command-fg "$onedark_white,bold"
+set -g message-command-bg "$onedark_black"
+
 # Window status alignment
 set -g status-justify centre
 
