--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -185,7 +185,7 @@ set -g @yank_selection 'primary'
 
 # Plugins ---------------------------{
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
 #set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -194,6 +194,8 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 #set -g @plugin 'odedlaz/tmux-onedark-theme'
 set -g @plugin 'odedlaz/tmux-status-variables'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'tmux-plugins/tmux-open'
 # ---------------------------------}
 
 # Initialize TMUX plugin manager
