--- a/gtkrc2_3/gtk3.settings.ini
+++ b/gtkrc2_3/gtk3.settings.ini
@@ -1,12 +1,13 @@
 [Settings]
-gtk-icon-theme-name=Breeze-Maia-Dark
-gtk-theme-name=Arc-Dark
+gtk-application-prefer-dark-theme=1
+gtk-theme-name=Arc-Maia-Dark
+gtk-icon-theme-name=Adwaita
 gtk-font-name=DejaVu Sans 8
-gtk-application-prefer-dark-theme=0
-gtk-cursor-theme-size=0
+gtk-cursor-theme-name=Breeze
+gtk-cursor-theme-size=18
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=0
+gtk-button-images=1
 gtk-menu-images=1
 gtk-enable-event-sounds=0
 gtk-enable-input-feedback-sounds=0
@@ -14,3 +15,5 @@ gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
+gtk-decoration-layout=:menu,appmenu,close
+gtk-modules=gail:atk-bridge
