--- a/termite/default.config
+++ b/termite/default.config
@@ -1,49 +1,65 @@
+[options]
+    resize_grip = false
+    scroll_on_output = false
+    scroll_on_keystroke = true
+    audible_bell = true
+    visible_bell = false
+    mouse_autohide = true
+    allow_bold = true
+    dynamic_title = true
+    urgent_on_bell = true
+    clickable_url = true
+    font = Source Code Pro for Powerline 9
+    scrollback_lines = 1000
+    search_wrap = true
+    cursor_blink = system
+    cursor_shape = block
+
+[hints]
+    foreground = #55FFFF
+
 [colors]
-# Base16 Tomorrow Night
-# Author: Chris Kempson (http://chriskempson.com)
+    foreground      = #d8d8d8
+    foreground_bold = #e8e8e8
+    cursor          = #e8e8e8
+    background      = #181818
 
-foreground      = #c5c8c6
-foreground_bold = #e0e0e0
-cursor          = #e0e0e0
-background      = #1d1f21
+    # 16 color space
 
-# 16 color space
+    # Black, Gray, Silver, White
+    color0  = #181818
+    color8  = #585858
+    color7  = #d8d8d8
+    color15 = #f8f8f8
 
-# Black, Gray, Silver, White
-color0  = #1d1f21
-color8  = #969896
-color7  = #c5c8c6
-color15 = #ffffff
+    # Red
+    color1  = #ab4642
+    color9  = #ab4642
 
-# Red
-color1  = #cc6666
-color9  = #cc6666
+    # Green
+    color2  = #a1b56c
+    color10 = #a1b56c
 
-# Green
-color2  = #b5bd68
-color10 = #b5bd68
+    # Yellow
+    color3  = #f7ca88
+    color11 = #f7ca88
 
-# Yellow
-color3  = #f0c674
-color11 = #f0c674
+    # Blue
+    color4  = #7cafc2
+    color12 = #7cafc2
 
-# Blue
-color4  = #81a2be
-color12 = #81a2be
+    # Purple
+    color5  = #ba8baf
+    color13 = #ba8baf
 
-# Purple
-color5  = #b294bb
-color13 = #b294bb
+    # Teal
+    color6  = #86c1b9
+    color14 = #86c1b9
 
-# Teal
-color6  = #8abeb7
-color14 = #8abeb7
-
-# Extra colors
-color15 = #ffffff
-color16 = #de935f
-color17 = #a3685a
-color18 = #282a2e
-color19 = #373b41
-color20 = #b4b7b4
-color21 = #e0e0e0
+    # Extra colors
+    color16 = #dc9656
+    color17 = #a16946
+    color18 = #282828
+    color19 = #383838
+    color20 = #b8b8b8
+    color21 = #e8e8e8
